--- a/planner/templates/homepg.html
+++ b/planner/templates/homepg.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PLAN4ME</title>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'css_images/homepg.css' %}">
+        <link rel="stylesheet" href="{% static 'homepg.css' %}">
 </head>
 
 <body>
