--- a/planner/templates/result.html
+++ b/planner/templates/result.html
@@ -3,10 +3,40 @@
   <head>
     <title>Plan4me</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css_images/result.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'css_images/result.css' %}">-->
 </head>
     <body>
         <p>work in progress</p>
+        <ul class="errorlist">
+            <li>date_from
+                <ul class="errorlist">
+                    <li>This field is required.</li>
+                </ul>
+            </li>
+            <!---->
+            <li>date_to
+                <ul class="errorlist">
+                    <li>This field is required.</li>
+                </ul>
+            </li>
+            <!---->
+            <li>min_budget
+                <ul class="errorlist">
+                    <li>This field is required.</li>
+                </ul>
+            </li>
+            <!---->
+            <li>max_budget
+                <ul class="errorlist">
+                    <li>This field is required.</li>
+                </ul>
+            </li>
+            <!---->
+            <li>keywords
+                <ul class="errorlist">
+                    <li>This field is required.</li>
+                </ul>
+            </li>
+        </ul>
     </body>
 </html>
-    
