--- a/planner/templates/core/result.html
+++ b/planner/templates/core/result.html
@@ -7,5 +7,8 @@
 </head>
     <body>
         <p>work in progress</p>
+        {% for entry in posts %}
+            <br><h1>{{ entry }}</h1>
+        {% endfor %}
     </body>
 </html>
