--- a/planner/templates/core/result.html
+++ b/planner/templates/core/result.html
@@ -13,16 +13,27 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-------------------------------------------------------------->
         <div class="container-fluid">
             <h1>Search Results:</h1>
             <div class="row">
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                     <h2>Restaurants: </h2>
-                    <!--<p>{{ restaurants }}</p>-->
+                    {% for each_res in restaurants %}
+                        {% for each_key, each_value in each_res.items %}
+                            <p>{{ each_value }}</p>
+                        {% endfor %}
+                        <br><p>=====================================</p>
+                    {% endfor %}
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                     <h2>Hotels: </h2>
-                    <!--<p>{{ hotels }}</p>-->
+                    {% for each_hotel in hotels %}
+                        {% for each_key, each_value in each_hotel.items %}
+                            <p>{{ each_value }}</p>
+                        {% endfor %}
+                        <br><p>=====================================</p>
+                    {% endfor %}
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                     <h2>Events: </h2>
